grammars/tree-sitter-checkmate/grammar.js
    source_file: ($) =>
      repeat(choice($._newline, $._top_level_item)),

    // ------------------------------------------------------------------
    // Lexical
    // ------------------------------------------------------------------

    _newline: ($) => token(/[\r\n]+/),

    string: ($) => token(/"(?:\\[^\r\n]|\\|[^"\\\r\n])*"/),

    int_literal: ($) =>
      token(
        choice(
          /0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
          /0[oO][0-7](_?[0-7])*/,
          /0[bB][01](_?[01])*/,
          /[0-9](_[0-9]|[0-9])*/,
        ),
      ),

    // Float literals (§2.4): a fractional part and/or an exponent
    // (`e`/`E`, optional sign), `_` separators allowed inside digit runs.
    bool_literal: ($) => choice('true', 'false'),

    identifier: ($) => /([a-zA-Z_]|[0-9]+[a-zA-Z_])[a-zA-Z0-9_]*/,

    dotted_path: ($) =>
      prec.left(seq($.identifier, repeat(seq('.', $.identifier)))),

    // Interpolated strings (§2.8/§4.1): $"...{expr}..." — text runs stop at
    // `{` (island start) and `"` (string end); escape pairs are consumed
    // atomically so `\{` stays literal text.
    _type: ($) =>
      choice(
        $.primitive_type,
        $.generic_type,
        $.array_type,
        alias($.identifier, $.type_identifier),
        $.mega_invocation,
      ),

    primitive_type: ($) => choice('int', 'float', 'bool', 'str', 'void'),

    generic_type: ($) =>
      prec(
        1,
        seq(
          field('name', alias($.identifier, $.type_identifier)),
          $.type_arguments,
        ),
      ),

    type_arguments: ($) =>
      seq(
        '<',
        repeat($._newline),
        $._type,
        repeat(seq(',', repeat($._newline), $._type)),
        repeat($._newline),
        '>',
      ),

    array_type: ($) => prec(2, seq($._type, '[]')),

    type_parameters: ($) =>
      seq(
        '<',
        repeat($._newline),
        $.identifier,
        repeat(seq(',', repeat($._newline), $.identifier)),
        repeat($._newline),
        '>',
      ),

    // ------------------------------------------------------------------
    // Top level (§2.1–§2.3, §2.6, §2.7, §2.11, §9, §10.4, §8)
    // ------------------------------------------------------------------

    _top_level_item: ($) =>
      choice(
        $.import_statement,
        $.struct_declaration,
        $.enum_declaration,
        $.function_declaration,
        $.impl_declaration,
        $.grammar_declaration,
        $.mega_declaration,
        // mega_invocation at top level arrives wrapped in an
        // expression_statement via _statement, keeping one canonical shape.
        $.schema_declaration,
        $.capability_declaration,
        $.interface_declaration,
        $._statement,
      ),

    import_statement: ($) => seq('import', field('path', $.dotted_path)),

    struct_declaration: ($) =>
      seq(
        'struct',
        field('name', $.identifier),
        optional($.type_parameters),
        '{',
        newlineList($, $.field_declaration),
        '}',
      ),

    field_declaration: ($) =>
      seq(field('type', $._type), field('name', $.identifier)),

    enum_declaration: ($) =>
      seq(
        'enum',
        field('name', $.identifier),
        optional($.type_parameters),
        '{',
        newlineList($, $.enum_variant),
        '}',
      ),

    enum_variant: ($) =>
      seq(
        field('name', $.identifier),
        optional(field('payload', $.parameter_list)),
      ),

    function_declaration: ($) =>
      seq(
        field('return_type', $._type),
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        field('body', $.block),
      ),

    parameter_list: ($) =>
      seq(
        '(',
        repeat($._newline),
        repeat(
          seq(
            $.parameter,
            repeat($._newline),
            optional(seq(',', repeat($._newline))),
          ),
        ),
        ')',
      ),

    parameter: ($) =>
      seq(field('type', $._type), field('name', $.identifier)),

    impl_declaration: ($) =>
      seq(
        'impl',
        field('target', $.dotted_path),
        '{',
        newlineList($, $.function_declaration),
        '}',
      ),

    // §9 — schema files share the .cm extension.
    block: ($) => prec(1, seq('{', newlineList($, $._statement), '}')),

    _statement: ($) =>
      choice(
        prec(PREC.DECLARATION, $.variable_declaration),
        prec(PREC.DECLARATION, $.infer_declaration),
        $.assignment_statement,
        $.return_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.expression_statement,
        $.block,
      ),

    variable_declaration: ($) =>
      seq(
        field('type', $._type),
        field('name', $.identifier),
        '=',
        field('value', $._expr),
      ),

    infer_declaration: ($) =>
      seq('infer', field('name', $.identifier), '=', field('value', $._expr)),

    // Template hole: `infer $param` splices a declared name without a
    // syntactic initializer (the capture value becomes one).
    assignment_statement: ($) =>
      seq(
        field('left', $._lvalue),
        field('operator', choice('=', '+=', '-=', '*=', '/=', '%=')),
        field('right', $._expr),
      ),

    _lvalue: ($) =>
      seq(
        $.identifier,
        repeat(
          choice(
            seq('.', $.identifier),
            seq('[', repeat($._newline), $._expr, repeat($._newline), ']'),
          ),
        ),
      ),

    // prec.right: prefer parsing a value over reducing the bare form —
    // `return` is still the restricted production because the value itself
    // cannot begin on the next line (statements separate on newlines).
    return_statement: ($) =>
      prec.right(seq('return', optional(field('value', $._expr)))),

    // `else` attaches on the same line as the closing brace (`} else {`),
    // matching every fixture and the canonical formatting style; the
    // speculative line break in `_else_opt` also re-attaches a
    // newline-separated `else`, mirroring the real parser's backtracking.
    //
    // The `else` token itself is consumed INSIDE else_clause. Leaving it
    // out does not "let recovery handle it": in statement position nothing
    // expects the keyword, so the lexer falls back to `identifier` and
    // every `else` — in an `else if` chain and before a final block alike
    // — parses as a bare identifier expression statement, invisible to
    // `"else" @keyword`.
    if_statement: ($) =>
      seq(
        'if',
        repeat($._newline),
        field('condition', $._parenthesized),
        repeat($._newline),
        field('consequence', $.block),
        optional($._else_opt),
      ),

    else_clause: ($) => seq('else', choice($.if_statement, $.block)),

    // The if_statement alternative with its speculative line break:
    // `repeat($._newline)` also matches zero breaks, so the same-line
    // `} else {` spelling rides the same path. The dynamic precedence
    // breaks the GLR ambiguity in favor of attaching the `else` (an
    // `else` can never START a statement, so the surviving identifier
    // reading is always the worse one).
    _else_opt: ($) =>
      prec.dynamic(
        1,
        seq(repeat($._newline), field('alternative', $.else_clause)),
      ),

    expression_statement: ($) => $._expr,

    // ------------------------------------------------------------------
    // Expressions (Appendix A)
    // ------------------------------------------------------------------

    _expr: ($) =>
      choice(
        $.identifier,
        $.int_literal,
        $.float_literal,
        $.bool_literal,
        $.string,
        $.interp_string,
        $.parenthesized_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.propagate_expression,
        $.unary_expression,
        $.binary_expression,
        $.match_expression,
        $.array_literal,
        $.map_literal,
        $.splice,
        $.splice_array,
        $.compile_time_call,
        $.quantifier_expression,
        $.mega_invocation,
      ),

    _parenthesized: ($) =>
      seq(
        '(',
        repeat($._newline),
        $._paren_expr,
        repeat($._newline),
        ')',
      ),

    parenthesized_expression: ($) => $._parenthesized,

    // Inside parentheses newlines are insignificant (§A.8), so a chain may
    // continue with ANY binary operator at the head of the next line:
    //
    //     int wrapped = (
    //         base
    //         + bonus
    //     )
    //
    // The continuation lives HERE, not in binary_expression, because the
    // leading break is unambiguous only at the paren-expression level (a
    // statement-level break before an operator is a compile error). Each
    // continuation operand is a full _expr, so operator precedence is kept
    // for the operand itself.
    call_expression: ($) =>
      prec(PREC.POSTFIX, seq(field('function', $._expr), $.arguments)),

    arguments: ($) =>
      seq(
        '(',
        repeat($._newline),
        repeat(
          seq(
            $._argument,
            repeat($._newline),
            optional(seq(',', repeat($._newline))),
          ),
        ),
        ')',
      ),

    // Named arguments may be comma-separated or adjacent (§2.12: after the
    // insignificant-newline pass, the multi-line named style arrives as
    // adjacent `name: value` pairs). Template element lists may contain
    // `[each ...]` repetitions directly (§8.4 join conventions).
    _argument: ($) =>
      choice($.named_argument, $.template_each, $.template_when, $._expr),

    field_expression: ($) =>
      prec(
        PREC.POSTFIX,
        seq(field('object', $._expr), '.', field('property', $.identifier)),
      ),

    propagate_expression: ($) => prec(PREC.PROPAGATE, seq($._expr, '?')),

    unary_expression: ($) =>
      prec(
        PREC.UNARY,
        seq(
          field('operator', choice('-', '!')),
          repeat($._newline),
          field('operand', $._expr),
        ),
      ),

    // Binary operators join across a line break when the line ends with the
    // operator (§A.8). A break BEFORE an operator occurs only inside
    // parentheses (where the real pipeline strips it) — _parenthesized
    // carries a dedicated continuation for that spelling below.
    binary_expression: ($) =>
      choice(
        prec.left(
          PREC.OR,
          seq(
            field('left', $._expr),
            field('operator', '||'),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
        prec.left(
          PREC.AND,
          seq(
            field('left', $._expr),
            field('operator', '&&'),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
        prec.left(
          PREC.COMPARE,
          seq(
            field('left', $._expr),
            field('operator', choice('==', '!=', '<', '<=', '>', '>=')),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
        prec.left(
          PREC.ADD,
          seq(
            field('left', $._expr),
            field('operator', choice('+', '-')),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
        prec.left(
          PREC.MUL,
          seq(
            field('left', $._expr),
            field('operator', choice('*', '/', '%')),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
      ),

    // `some x in xs { ... }` / `all x in xs { ... }` (§8.3.4 conditions).
    array_literal: ($) =>
      seq(
        '[',
        commaOrNewlineList($, choice($._expr, $.template_each, $.template_when)),
        ']',
      ),

    map_literal: ($) =>
      seq('{', commaOrNewlineList($, $.map_entry), '}'),

    map_entry: ($) =>
      seq(
        field('key', choice($.string, $.int_literal, $.float_literal, $.identifier)),
        ':',
        repeat($._newline),
        field('value', $._expr),
      ),

    // §8.5 — `@fn(...)` executes at compile time during expansion. prec.right
    // binds the argument list to the @-call itself.
